--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./files/images/icon.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
+
+      <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
+      
+      <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,7 +29,32 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="/main.js"></script>
+    <style type="text/css">
+      .table td {
+        border-top: 0px;
+        border-bottom: 1px solid #dee2e6;
+      }
+
+      .floating_alert {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        z-index: 5000;
+      }
+
+      @media screen and (max-width:576px) {
+        .jumbotron h1 {
+          font-size: 1.75rem;
+          overflow: hidden;
+        }
+      }
+    </style>
+    <title>Remote-Upload</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
