--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,11 @@
 <html lang="zh-TW">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./files/images/icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./files/images/icon.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <!--
 
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -29,10 +26,40 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script><!--for tooltips-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script>
+      onSignIn = (googleUser) => {
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Do not send to your backend! Use an ID token instead.
+        console.log("Name: " + profile.getName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail()); // This is null if the 'email' scope is not present.
+      };
+    </script>
     <style type="text/css">
+      .form-signin {
+        max-width: 330px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      .form-signin input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+      .form-signin input[type="email"] {
+        margin-bottom: -1px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+      .form-signin .form-control {
+        padding: 10px;
+        height: auto;
+      }
+
       .table td {
         border-top: 0px;
         border-bottom: 1px solid #dee2e6;
@@ -45,7 +72,7 @@
         z-index: 5000;
       }
 
-      @media screen and (max-width:576px) {
+      @media screen and (max-width: 576px) {
         .jumbotron h1 {
           font-size: 1.75rem;
           overflow: hidden;
