--- a/index.html
+++ b/index.html
@@ -8,8 +8,28 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <style>
+      .form-signin {
+        max-width: 330px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      .form-signin input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+      .form-signin input[type="email"] {
+        margin-bottom: -1px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+      .form-signin .form-control {
+        padding: 10px;
+        height: auto;
+      }
       .table td {
         border-top: 0;
         border-bottom: 1px solid #dee2e6;
@@ -111,7 +131,7 @@
         r();
       })([]);
     </script>
-    <script src="./static/js/2.94e9a934.chunk.js"></script>
-    <script src="./static/js/main.7428bdf8.chunk.js"></script>
+    <script src="./static/js/2.1437d13e.chunk.js"></script>
+    <script src="./static/js/main.74ba7554.chunk.js"></script>
   </body>
 </html>
