add spinner and change tooltip to static

--- a/public/index.html
+++ b/public/index.html
@@ -27,19 +27,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script><!--for tooltips-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script>
-      onSignIn = (googleUser) => {
-        var profile = googleUser.getBasicProfile();
-        console.log("ID: " + profile.getId()); // Do not send to your backend! Use an ID token instead.
-        console.log("Name: " + profile.getName());
-        console.log("Image URL: " + profile.getImageUrl());
-        console.log("Email: " + profile.getEmail()); // This is null if the 'email' scope is not present.
-      };
-    </script>
     <style type="text/css">
+      .spinner-border {
+        width: 15vmin;
+        height: 15vmin;
+        border-width: 1.5vmin;
+      }
+      .btn.disabled {
+        cursor: auto;
+      }
       .form-signin {
         max-width: 330px;
         margin-left: auto;
