--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <style>
+      .spinner-border {
+        width: 15vmin;
+        height: 15vmin;
+        border-width: 1.5vmin;
+      }
+      .btn.disabled {
+        cursor: auto;
+      }
       .form-signin {
         max-width: 330px;
         margin-left: auto;
@@ -122,7 +127,7 @@
           (i.o = function (e, t) {
             return Object.prototype.hasOwnProperty.call(e, t);
           }),
-          (i.p = "/");
+          (i.p = "./");
         var l = (this["webpackJsonpmy-react-website"] = this["webpackJsonpmy-react-website"] || []),
           a = l.push.bind(l);
         (l.push = t), (l = l.slice());
@@ -132,6 +137,6 @@
       })([]);
     </script>
     <script src="./static/js/2.1437d13e.chunk.js"></script>
-    <script src="./static/js/main.74ba7554.chunk.js"></script>
+    <script src="./static/js/main.f7144d62.chunk.js"></script>
   </body>
 </html>
