--- a/index.html
+++ b/index.html
@@ -1,142 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-TW">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./files/images/icon.png" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-    <style>
-      .spinner-border {
-        width: 15vmin;
-        height: 15vmin;
-        border-width: 1.5vmin;
-      }
-      .btn.disabled {
-        cursor: auto;
-      }
-      .form-signin {
-        max-width: 330px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-      .form-signin input[type="password"] {
-        margin-bottom: 10px;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-      }
-      .form-signin input[type="email"] {
-        margin-bottom: -1px;
-        border-bottom-right-radius: 0;
-        border-bottom-left-radius: 0;
-      }
-      .form-signin .form-control {
-        padding: 10px;
-        height: auto;
-      }
-      .table td {
-        border-top: 0;
-        border-bottom: 1px solid #dee2e6;
-      }
-      .floating_alert {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        z-index: 5000;
-      }
-      @media screen and (max-width: 576px) {
-        .jumbotron h1 {
-          font-size: 1.75rem;
-          overflow: hidden;
-        }
-      }
-    </style>
-    <title>Remote-Upload</title>
-    <link href="./static/css/main.69eda509.chunk.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script>
-      !(function (e) {
-        function t(t) {
-          for (var n, i, l = t[0], a = t[1], f = t[2], p = 0, s = []; p < l.length; p++)
-            (i = l[p]), Object.prototype.hasOwnProperty.call(o, i) && o[i] && s.push(o[i][0]), (o[i] = 0);
-          for (n in a) Object.prototype.hasOwnProperty.call(a, n) && (e[n] = a[n]);
-          for (c && c(t); s.length; ) s.shift()();
-          return u.push.apply(u, f || []), r();
-        }
-        function r() {
-          for (var e, t = 0; t < u.length; t++) {
-            for (var r = u[t], n = !0, l = 1; l < r.length; l++) {
-              var a = r[l];
-              0 !== o[a] && (n = !1);
-            }
-            n && (u.splice(t--, 1), (e = i((i.s = r[0]))));
-          }
-          return e;
-        }
-        var n = {},
-          o = { 1: 0 },
-          u = [];
-        function i(t) {
-          if (n[t]) return n[t].exports;
-          var r = (n[t] = { i: t, l: !1, exports: {} });
-          return e[t].call(r.exports, r, r.exports, i), (r.l = !0), r.exports;
-        }
-        (i.m = e),
-          (i.c = n),
-          (i.d = function (e, t, r) {
-            i.o(e, t) || Object.defineProperty(e, t, { enumerable: !0, get: r });
-          }),
-          (i.r = function (e) {
-            "undefined" != typeof Symbol &&
-              Symbol.toStringTag &&
-              Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }),
-              Object.defineProperty(e, "__esModule", { value: !0 });
-          }),
-          (i.t = function (e, t) {
-            if ((1 & t && (e = i(e)), 8 & t)) return e;
-            if (4 & t && "object" == typeof e && e && e.__esModule) return e;
-            var r = Object.create(null);
-            if (
-              (i.r(r), Object.defineProperty(r, "default", { enumerable: !0, value: e }), 2 & t && "string" != typeof e)
-            )
-              for (var n in e)
-                i.d(
-                  r,
-                  n,
-                  function (t) {
-                    return e[t];
-                  }.bind(null, n)
-                );
-            return r;
-          }),
-          (i.n = function (e) {
-            var t =
-              e && e.__esModule
-                ? function () {
-                    return e.default;
-                  }
-                : function () {
-                    return e;
-                  };
-            return i.d(t, "a", t), t;
-          }),
-          (i.o = function (e, t) {
-            return Object.prototype.hasOwnProperty.call(e, t);
-          }),
-          (i.p = "./");
-        var l = (this["webpackJsonpmy-react-website"] = this["webpackJsonpmy-react-website"] || []),
-          a = l.push.bind(l);
-        (l.push = t), (l = l.slice());
-        for (var f = 0; f < l.length; f++) t(l[f]);
-        var c = a;
-        r();
-      })([]);
-    </script>
-    <script src="./static/js/2.1437d13e.chunk.js"></script>
-    <script src="./static/js/main.f7144d62.chunk.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="zh-TW"><head><meta charset="utf-8"/><link rel="icon" type="image/png" sizes="32x32" href="./files/images/icon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#6f42c1"/><meta name="description" content="Web site created using create-react-app"/><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/><style>.spinner-border{width:15vmin;height:15vmin;border-width:1.5vmin}.btn.disabled{cursor:auto}.form-signin{max-width:330px;margin-left:auto;margin-right:auto}.form-signin input[type=password]{margin-bottom:10px;border-top-left-radius:0;border-top-right-radius:0}.form-signin input[type=email]{margin-bottom:-1px;border-bottom-right-radius:0;border-bottom-left-radius:0}.form-signin .form-control{padding:10px;height:auto}.table td{border-top:0;border-bottom:1px solid #dee2e6}.floating_alert{width:100vw;max-width:420px;padding:0 20px;position:fixed;bottom:0;right:0;z-index:5000}.bg-purple{background-color:var(--purple)}@media screen and (max-width:576px){.jumbotron h1{font-size:1.75rem;overflow:hidden}}</style><title>Remote-Upload</title><link href="./static/css/main.69eda509.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,i,l=t[0],a=t[1],f=t[2],p=0,s=[];p<l.length;p++)i=l[p],Object.prototype.hasOwnProperty.call(o,i)&&o[i]&&s.push(o[i][0]),o[i]=0;for(n in a)Object.prototype.hasOwnProperty.call(a,n)&&(e[n]=a[n]);for(c&&c(t);s.length;)s.shift()();return u.push.apply(u,f||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,l=1;l<r.length;l++){var a=r[l];0!==o[a]&&(n=!1)}n&&(u.splice(t--,1),e=i(i.s=r[0]))}return e}var n={},o={1:0},u=[];function i(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,i),r.l=!0,r.exports}i.m=e,i.c=n,i.d=function(e,t,r){i.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(e,t){if(1&t&&(e=i(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(i.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)i.d(r,n,function(t){return e[t]}.bind(null,n));return r},i.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(t,"a",t),t},i.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},i.p="./";var l=this["webpackJsonpmy-react-website"]=this["webpackJsonpmy-react-website"]||[],a=l.push.bind(l);l.push=t,l=l.slice();for(var f=0;f<l.length;f++)t(l[f]);var c=a;r()}([])</script><script src="./static/js/2.1437d13e.chunk.js"></script><script src="./static/js/main.357453b8.chunk.js"></script></body></html>
