--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./files/images/icon.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#6f42c1" />
     <meta name="description" content="Web site created using create-react-app" />
     <!--
 
@@ -62,10 +62,17 @@
       }
 
       .floating_alert {
-        position: absolute;
-        top: 20px;
-        right: 20px;
+        width: 100vw;
+        max-width: 420px;
+        padding: 0px 20px;
+        position: fixed;
+        bottom: 0px;
+        right: 0px;
         z-index: 5000;
+      }
+
+      .bg-purple {
+        background-color: var(--purple);
       }
 
       @media screen and (max-width: 576px) {
