--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -7,28 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6f42c1" />
     <meta name="description" content="Web site created using create-react-app" />
-    <!--
-
-      <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <!--
-      
-      <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
     <style type="text/css">
-      .bg-lite-purple {
+      .jumbotron {
         background-color: #f4f2fb;
       }
       .spinner-border {
@@ -139,7 +120,7 @@
 
       .japanese-cube {
         position: absolute;
-        height: calc(100% - var(--off-y) + 3rem);
+        height: calc(100% - var(--off-y) + 1.5rem);
         width: 100vw;
         top: 0;
         left: 0;
@@ -148,7 +129,7 @@
       .blur {
         z-index: -1;
         filter: blur(5px);
-        transform: translate(calc(-50vw + var(--container-w) / 2), calc(var(--off-y) - 3rem));
+        transform: translate(calc(-50vw + var(--container-w) / 2), calc(var(--off-y) - 1.5rem));
       }
 
       @media screen and (max-width: 575px) {
@@ -191,9 +172,7 @@
         let offHeight = 0;
         let resizeCb = () => {
           newOffHeight =
-            document.querySelector(".jumbotron").offsetHeight +
-            document.querySelector(".navbar").offsetHeight +
-            72;
+            document.querySelector(".jumbotron").offsetHeight + document.querySelector(".navbar").offsetHeight;
           if (newOffHeight !== offHeight) {
             let root = document.documentElement;
             document.documentElement.style.setProperty("--off-y", -newOffHeight + "px");
